tests/fixtures/valid/multi/instantiated_import_dim_binding/src/lib/main.gcl
// main.gcl -- rebinds the lib's Speed dimension to Velocity
include lib.lib(Speed: Velocity).{ v };

node result: Velocity = @v;
