tests/fixtures/invalid/multi/merged_dep_body_dim_mismatch/src/lib/lib.gcl
// lib.gcl -- valid on its own: `Speed` is Length/Time and the body 10 m/s
// matches. The mismatch only appears once an instantiated include rebinds
// `Speed` to an incompatible dimension (#868).
pub dim Speed = Length / Time;

pub const node v: Speed = 10.0 m/s;
